# wezterm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile
.cargo/: config.toml
.github/workflows/: gen_centos9.yml  gen_centos9_continuous.yml  gen_centos9_tag.yml  gen_debian10.3.yml  gen_debian10.3_continuous.yml  gen_debian10.3_tag.yml  gen_debian11.yml  gen_debian11_continuous.yml  gen_debian11_tag.yml  gen_debian12.yml  gen_debian12_continuous.yml  gen_debian12_tag.yml  gen_fedora39.yml  gen_fedora39_continuous.yml  gen_fedora39_tag.yml  gen_fedora40.yml  gen_fedora40_continuous.yml  gen_fedora40_tag.yml  gen_fedora41.yml  gen_fedora41_continuous.yml  gen_fedora41_tag.yml  gen_macos.yml  gen_macos_continuous.yml  gen_macos_tag.yml  gen_ubuntu20.04.yml  gen_ubuntu20.04_continuous.yml  gen_ubuntu20.04_tag.yml  gen_ubuntu22.04.yml  gen_ubuntu22.04_continuous.yml  gen_ubuntu22.04_tag.yml  gen_ubuntu24.04.yml  gen_ubuntu24.04_continuous.yml  gen_ubuntu24.04_tag.yml  gen_windows.yml  gen_windows_continuous.yml  gen_windows_tag.yml  nix_continuous.yml  no-response.yml  update-flake.yml
assets/shell-completion/: fish  zsh
bidi/: README.md
bidi/src/: direction.rs  lib.rs
ci/: build-docs.sh  generate-docs.py  generate-workflows.py
codec/src/: lib.rs
color-types/: Cargo.toml
color-types/src/: lib.rs
config/src/: cell.rs  color.rs  config.rs  keyassignment.rs  lib.rs  terminal.rs
docs/: changelog.md  faq.md  mkdocs-base.yml  quickselect.md  ssh.md
docs/config/: appearance.md  files.md  plugins.md
docs/config/lua/: SpawnCommand.md  TabInformation.md
docs/config/lua/config/: cell_widths.md  char_select_font.md  command_palette_font.md  custom_block_glyphs.md  kde_window_background_blur.md  launcher_alphabet.md  macos_fullscreen_extend_behind_notch.md  macos_window_background_blur.md  pane_select_font.md  quick_select_remove_styling.md  reverse_video_cursor_min_contrast.md  text_min_contrast_ratio.md  win32_system_backdrop.md  window_decorations.md
docs/config/lua/keyassignment/: ActivateCommandPalette.md  CharSelect.md  Confirmation.md  InputSelector.md  PaneSelect.md  PromptInputLine.md  ShowLauncherArgs.md
docs/config/lua/pane/: get_progress.md  paste.md  send_paste.md
docs/config/lua/wezterm/: to_string.md
docs/config/lua/window-events/: format-tab-title.md
docs/examples/: cmd-synopsis-wezterm-imgcat--help.txt
docs/install/: linux.md  windows.md
docs/recipes/: hyperlinks.md
lua-api-crates/color-funcs/: Cargo.toml
lua-api-crates/plugin/src/: lib.rs
mux/src/: domain.rs  lib.rs  localpane.rs  ssh.rs  tmux.rs  tmux_commands.rs  tmux_pty.rs
nix/: flake.nix
procinfo/: Cargo.toml
pty/src/: cmdbuilder.rs
term/: Cargo.toml
term/src/: color.rs  config.rs  lib.rs  screen.rs  terminal.rs
term/src/terminalstate/: image.rs  iterm.rs  kitty.rs  mod.rs  performer.rs  sixel.rs
term/src/test/: mod.rs
termwiz/: CHANGELOG.md  Cargo.toml
termwiz/src/: cell.rs  cellcluster.rs  color.rs  error.rs  hyperlink.rs  input.rs  lib.rs
termwiz/src/escape/: csi.rs  mod.rs  osc.rs
termwiz/src/escape/parser/: mod.rs
termwiz/src/render/: terminfo.rs  windows.rs
termwiz/src/surface/: change.rs  mod.rs
termwiz/src/surface/line/: cellref.rs  vecstorage.rs
termwiz/src/tmux_cc/: mod.rs  tmux.pest
vtparse/: Cargo.toml
vtparse/src/: enums.rs  lib.rs
wezterm-cell/: Cargo.toml
wezterm-cell/src/: color.rs  image.rs  lib.rs
wezterm-char-props/: Cargo.toml
wezterm-char-props/codegen/: Cargo.toml
wezterm-char-props/codegen/src/: main.rs
wezterm-char-props/src/: emoji_variation.rs  lib.rs  nerdfonts.rs
wezterm-dynamic/: Cargo.toml
wezterm-dynamic/derive/src/: attr.rs  fromdynamic.rs
wezterm-dynamic/src/: array.rs  drop.rs  error.rs  fromdynamic.rs  lib.rs  object.rs  todynamic.rs  value.rs
wezterm-escape-parser/: Cargo.toml
wezterm-escape-parser/src/: allocate.rs  apc.rs  color.rs  csi.rs  error.rs  esc.rs  hyperlink.rs  lib.rs  osc.rs
wezterm-escape-parser/src/parser/: mod.rs  sixel.rs
wezterm-escape-parser/src/tmux_cc/: mod.rs
wezterm-font/src/: lib.rs
wezterm-gui/src/: commands.rs  customglyph.rs  main.rs  shapecache.rs  spawn.rs
wezterm-gui/src/overlay/: confirm.rs  confirm_close_pane.rs  launcher.rs  mod.rs  quickselect.rs  selector.rs
wezterm-gui/src/termwindow/: mod.rs
wezterm-gui/src/termwindow/render/: mod.rs
wezterm-input-types/: Cargo.toml
wezterm-input-types/src/: lib.rs
wezterm-ssh/: Cargo.toml
wezterm-ssh/src/: config.rs  session.rs  sessioninner.rs
wezterm-ssh/tests/: sshd.rs
wezterm-surface/: Cargo.toml
wezterm-surface/src/: cellcluster.rs  change.rs  hyperlink.rs  lib.rs
wezterm-surface/src/line/: cellref.rs  clusterline.rs  line.rs  storage.rs  test.rs  vecstorage.rs
wezterm-toast-notification/src/: macos.rs
wezterm/src/: main.rs
window/: Cargo.toml
window/src/: egl.rs
window/src/os/macos/: window.rs
window/src/os/wayland/: state.rs  window.rs
