[package]
name = "wezterm-color-types"
version = "0.3.0"
authors = ["Wez Furlong"]
edition = "2018"
repository = "https://github.com/wezterm/wezterm"
description = "Types for working with colors"
license = "MIT"

[features]
use_serde = ["serde"]
std = ["serde/std", "dep:deltae", "csscolorparser/lab"]

[dependencies]
csscolorparser = {workspace=true, optional=true}
deltae = {workspace = true, optional=true}
num-traits = {workspace=true, features=["libm"]}
serde = {workspace=true, features = ["derive"], optional=true}
wezterm-dynamic.workspace = true
