[package]
name = "wezterm-char-props-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
# This crate is excluded from the workspace, so its
# deps are managed explicitly here
human-sort = "0.2"
phf_codegen = "0.10"
reqwest = {version="0.12", features=["blocking"]}
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
ucd-trie = "0.1"

